<resources>
    <string name="app_name">MoodTool</string>
    <string name="get_started">Get Started</string>
    <string name="swipe_guide">Swipe to learn more about the tools</string>
    <string name="this_app_provide">This app provides a suite of different tools to help you lift your mood</string>
    <string name="welcome_to">Welcome to Moodtools!</string>
    <string name="information">Information</string>
    <string name="information_guide">Read basic depression information, follow a thorough guide, and find helpful resources</string>
    <string name="test">Test</string>
    <string name="test_guide">Take a depression questionnaire to measure your symptom severity</string>
    <string name="videos">Videos</string>
    <string name="videos_guide">Discover helpful videos can improve you mood</string>
    <string name="thought_diary">Thought Diary</string>
    <string name="thought_diary_guide">Challenge and reframe you negative thoughts</string>
    <string name="activities">Activities</string>
    <string name="activities_guide">Perform healthy activities and track your changes in mood</string>
    <string name="safety_plan">Safety Plan</string>
    <string name="safety_plan_guide">Develop a safety plan to cope with suicidal thoughts</string>
    <string name="additional_app">Additional Apps</string>
    <string name="setting">Settings</string>
    <string name="support">Support</string>
    <string name="share">Share</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="other">Other</string>
    <string name="contact_us">Contact us</string>
    <string name="webpage">Webpage</string>
    <string name="about">About</string>
    <string name="send_mail">Send mail</string>
    <string name="about_act_1">MoodTools is a pioneer in the burgeoning field of mobile mental health. Founded in 2014, MoodTools has quickly become the top mobile solution for clinical depression.</string>
    <string name="about_act_2">Our mission is to package evidence-based strategies in an accessible design and bring them to our pocket for free to help you recover from clinical depression.</string>
    <string name="version">Version: 2.1</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="test_disclaimer">Disclaimer: This PHQ-9 questionnaire is a self-administered instrument used in primary care settings. This test is NOT diagnostic test. Please consult your physician if you are concerned about your mood.</string>
    <string name="start_test">Start Test</string>
    <string name="history">History</string>
    <string name="reminder">Reminder</string>
    <string name="over_last_2_weeks_how_often_bothered">Over the last 2 weeks, how often have you been bothered by…</string>
    <string name="not_at_all">Not at all</string>
    <string name="undo">Undo</string>
    <string name="home">Home</string>
    <string name="text_view">TextView</string>
    <string name="image_view">ImageView</string>
    <string name="line">Line</string>
    <string name="cognitive_distortions">Cognitive Distortions</string>
    <string name="cognitive_distortions_detail">Cognitive distortions consist of irrational logic in our thinking. These distortions typically reinforce negative thinking or emotions. They typically occur automatically and we simply accept them as true. However, if we step back from our negative thoughts, we can analyze them for the presence of cognitive distortions.</string>
    <string name="all_or_nothing"><u>All-or-nothing thinking</u></string>
    <string name="all_or_nothing_detail">Thinking in black or white, thinking in extremes. Using words such as \"always\" or \"never\" to describe yourself or situations.</string>
    <string name="should_must_statements"><u>Should / must statements</u></string>
    <string name="should_must_statements_detail">Thinking that you are obligated to do things; using \"should\" or \"must\" statements.</string>
    <string name="should_must_statements_ex">Ex. I should never feel angry. I should feel very guilty.</string>
    <string name="labeling"><u>Labeling</u></string>
    <string name="labeling_detail">Atributing a person\'s behaviors to his/her character or personality (\"this is who she is all the time\") rather than thinking it\'s temporary or just for one event (\"she just made a mistake\")</string>
    <string name="labeling_ex">Ex. That driver honked at me at the intersection so he must be an angry person in general.</string>
    <string name="all_or_nothing_ex">Ex. No one likes me; I am always a bother to other people; I never win anything.</string>
    <string name="overgeneralization"><u>Overgeneralization</u></string>
    <string name="overgeneralization_detail">Making a very broad conclusion based on one event; taking one situation and expecting the same result to happen in all future situations.</string>
    <string name="overgeneralization_ex">Ex. She cannot meet me for lunch today. This means she isn\'t reliable at all.</string>
    <string name="filtering_out_positive"><u>Filtering out the positive</u></string>
    <string name="filtering_out_positive_detail">Only focusing on the negative aspects of an experience while ignoring the positives. Focusing only on information that confirms what you already believe in.</string>
    <string name="filtering_out_positive_ex">Ex. He didn\'t like the chicken I made for dinner but loved the vegetables and dessert. I feel that my cooking skills are terrible because the chicken was bad.</string>
    <string name="jumping_conclusions"><u>Jumping to conclusions</u></string>
    <string name="jumping_conclusions_detail">Reaching a hasty conclusion or judging something without having enough facts.</string>
    <string name="jumping_conclusions_ex">Ex. She came home with a frown on her face, so she must be angry with me.</string>
    <string name="mind_reading"><u>Mind reading</u></string>
    <string name="mind_reading_detail">Assuming or inferring another person\'s thoughts or expecting for the worst possible scenario without actually confirming with the person or having solid evidence.</string>
    <string name="mind_reading_ex">Ex. My friend did not wave back at me when I waved to her from across the street. She must be angry with me right now.</string>
    <string name="fortune_telling"><u>Fortune-telling</u></string>
    <string name="fortune_telling_detail">Predicting a negative outcome before the event happens</string>
    <string name="fortune_telling_ex">Ex. The boss will definitely not like my presentation; My boyfriend will definitely hate my new haircut.</string>
    <string name="magnification_negative"><u>Magnification of the negative</u></string>
    <string name="magnification_negative_detail">Putting greater emphasis on possible failures, weaknesses, or threats.</string>
    <string name="magnification_negative_ex">Ex. During my class presentation I made a couple of mistakes while talking. My teacher and peers complimented me on a good presentation afterwards, but I continued to feel embarrassed about the things I messed up on.</string>
    <string name="minimization_positive"><u>Minimization of the positive</u></string>
    <string name="minimization_positive_detail">Putting lesser emphasis on possible success, strength or opportunity.</string>
    <string name="minimization_positive_ex">Ex. When someone compliments me, instead of feeling proud of my achievement I discount their compliments as simply being polite.</string>
    <string name="catastrophizing"><u>Catastrophizing</u></string>
    <string name="catastrophizing_detail">Over-exaggerating; believing in the worse case scenario or thinking something is extremely unbearable or impossible when it actually isn\'t that bad.</string>
    <string name="catastrophizing_ex">Ex. I knocked over that glass bottle and I feel mortified that everyone who is staring at me must think that I am a clumsy and useless person.</string>
    <string name="emotional_reasoning"><u>Emotional reasoning</u></string>
    <string name="emotional_reasoning_detail">Believing that if you feel that something is true it must be true.</string>
    <string name="emotional_reasoning_ex">Ex. I feel so dumb and useless, therefore I must be dumb and useless.</string>
    <string name="self_blaming"><u>Self-blaming</u></string>
    <string name="self_blaming_detail">Blaming yourself or thinking you\'re personally responsible for a situation that you actually have little control over.</string>
    <string name="self_blaming_ex">Ex. I was late to work because of a road accident, but I should have known that in advance.</string>
    <string name="other_blaming"><u>Other-blaming</u></string>
    <string name="other_blaming_detail">Blaming others or holding other people responsible for things done to you that they may have little control over.</string>
    <string name="other_blaming_ex">Ex. She should have been more careful when she knocked over that glass bottle.</string>
    <string name="overview">Overview</string>
    <string name="act_in_nutshell"><u>ACT in a nutshell</u></string>
    <string name="act_in_nutshell_detail">ACT aims to teach you mindfulness skills to deal with painful thoughts and feelings, and to help you clarify what is truly important and valuable in your life so that you can use that knowledge to guide and motivate you to change for the better. ACT focuses on six core principles, Contact with the present moment</string>
    <string name="act_in_nutshell_detail_1">1. Defusion</string>
    <string name="act_in_nutshell_detail_2">2. Acceptance</string>
    <string name="act_in_nutshell_detail_3">3. Observing the self</string>
    <string name="act_in_nutshell_detail_4">4. Values</string>
    <string name="act_in_nutshell_detail_5">5. Committed action</string>
    <string name="act_as_therapy">ACT as therapy</string>
    <string name="act_as_therapy_detail_1">ACT can be done in one-on-one sessions, with small groups or large workshops, with books and other media, through presentations, and with behavioral homework assignments. The number and length of the sessions depend on the individual and on the clinician. ACT differs from other therapies in that it is versatile — it can be used with individuals or with groups, as long=term therapy or brief therapy, and in a wide range of clinical populations.</string>
    <string name="act_as_therapy_detail_2">In contrast to other psychotherapies, ACT\'s goal is not to reduce your symptoms. Rather, it is based on the view that trying to get rid of the \"symptoms\" in the first place is what creates a clinical disorder. Instead of trying to control the thoughts, feelings, and memories that cross your mind, ACT wants to transform the relationship you have with your negative thoughts and learn to accept and embrace them. Reducing one\'s symptoms, in this case, just happens to be a by-product (and not the goal) of the therapy.</string>
    <string name="act_as_therapy_detail_3">According to research, ACT has shown to be as effective as cognitive-behavioral therapy. It is considered an empirically validated treatment by the American Psychological Association (APA) and the Substance Abuse and Mental Health Services Administration (SAMHSA).</string>
    <string name="act_as_therapy_detail_4">If you are interested in the learning more about ACT, the <a href='http://amzn.to/2qyBhYv'>Mindfulness and Acceptance Workbook for Depression</a> is a popular book that was written by one of the cofounders of ACT.</string>
</resources>