<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.information.guide.acceptance_commitment.OverviewAcceptCommitFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:targetApi="lollipop">

            <LinearLayout
                style="@style/ALCLinearLayout"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tvOverview"
                    style="@style/LargeTextInfo"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/overview"
                    android:transitionName="@string/text_view" />

                <ImageView
                    android:id="@+id/ivArrowOverview"
                    style="@style/SharedElementAnimation"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/ic_arrow_drop_down_grey600_36dp"
                    android:transitionName="@string/image_view" />

            </LinearLayout>

            <View
                android:id="@+id/lineOverview"
                style="@style/SharedElementAnimation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/colorGray"
                android:transitionName="@string/line" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/act_in_nutshell"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <TextView
                style="@style/NormalText"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/act_in_nutshell_detail" />

            <TextView
                style="@style/NormalText"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/act_in_nutshell_detail_1" />

            <TextView
                style="@style/NormalText"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/act_in_nutshell_detail_2" />

            <TextView
                style="@style/NormalText"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/act_in_nutshell_detail_3" />

            <TextView
                style="@style/NormalText"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/act_in_nutshell_detail_4" />

            <TextView
                style="@style/NormalText"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@string/act_in_nutshell_detail_5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/act_as_therapy"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <TextView
                style="@style/NormalText"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/act_as_therapy_detail_1" />

            <TextView
                style="@style/NormalText"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/act_as_therapy_detail_2" />

            <TextView
                style="@style/NormalText"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/act_as_therapy_detail_3" />

            <TextView
                android:id="@+id/tvLink"
                style="@style/NormalText"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/act_as_therapy_detail_4" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>